--- a/404notfound/index.html
+++ b/404notfound/index.html
@@ -7,6 +7,7 @@ layout: none
 <meta charset="utf-8" />
 <title>404 - Sorry page can not be found | paulfosterdesign.co.uk</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
+<meta name="description" content="In my vast data center, server rack 404 appears to have a problem">
 <meta name="author" content="Paul Foster">
 <meta name="copyright" content="Paul Foster 2014">
 <meta property="og:title" content="404 not found | paulfosterdesign.co.uk">
