beautify jungle a bit

--- a/jungle/drumming.html
+++ b/jungle/drumming.html
@@ -14,6 +14,11 @@
 <title>drumming: Entropic Jungle — dreat's take on digital garden</title>
 </head>
 <body class="tc-body">
+<div class="tc-sidebar-scrollable" style="overflow: auto;">
+<div class="tc-sidebar-header"><h1 class="tc-site-title">Entropic Jungle</h1></div>
+
+<div class="tc-site-subtitle">dreat's take on digital garden</div>
+</div>
 
 <section class="tc-story-river">
 <p><div class="tc-tiddler-frame tc-tiddler-view-frame tc-tiddler-exists " data-tags="" data-tiddler-title="drumming"><div class="tc-tiddler-title">
