Meta card image large

--- a/404notfound/index.html
+++ b/404notfound/index.html
@@ -16,8 +16,12 @@ layout: none
 <meta property="og:description" content="Paul Foster Page Not Found">
 <meta property="og:site-name" content="www.paulfosterdesign.co.uk">
 <meta property="og:locale" content="en_GB">
-<meta property="og:image" content="../assets/images/pfd-webclip-196x196.png">
-<meta name="twitter:card" content="summary">
+<meta property="og:image" content="404notfound-600x300.jpg">
+<meta property="og:image:width" content="600">
+<meta property="og:image:height" content="300">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="404notfound">
+<meta name="twitter:image:alt" content="Smoke is rising from server rack number 404">
 <meta name="twitter:site" content="@plfstr">
 <meta name="twitter:domain" content="www.paulfosterdesign.co.uk">
 <style type="text/css">
