--- a/404notfound/index.html
+++ b/404notfound/index.html
@@ -2,7 +2,7 @@
 layout: none
 ---
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en-gb" prefix="og: https://ogp.me/ns/website#">
 <head>
 <meta charset="utf-8" />
 <title>404 - Sorry page can not be found | paulfosterdesign.co.uk</title>
@@ -13,14 +13,14 @@ layout: none
 <meta property="og:title" content="404 not found | paulfosterdesign.co.uk">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.paulfosterdesign.co.uk/404notfound/">
-<meta property="og:description" content="Paul Foster Page Not Found">
+<meta property="og:description" content="Paul Foster 404 page">
 <meta property="og:site-name" content="www.paulfosterdesign.co.uk">
 <meta property="og:locale" content="en_GB">
-<meta property="og:image" content="404notfound-600x300.jpg">
+<meta property="og:image" content="https://www.paulfosterdesign.co.uk/404notfound/404notfound-600x300.jpg">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="300">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="404notfound">
+<meta name="twitter:title" content="404notfound page">
 <meta name="twitter:image:alt" content="Smoke is rising from server rack number 404">
 <meta name="twitter:site" content="@plfstr">
 <meta name="twitter:domain" content="www.paulfosterdesign.co.uk">
