--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@ Data Curated is the most recent date a golf course project has been reviewed.
 <footer>
   <!-- <p></p> -->
   <nav>
-  <p>Creators and managers of this list make no representations as to its accuracy, completeness, and/or its validity.  Users do so at their own risk. <a href="https://opensource.org/licenses/MIT">MIT License</a></p>
+  <p>Creators and managers of this list make no representations as to its accuracy, completeness, and/or its validity.  Users do so at their own risk.</p>
   </nav>
 </footer>
