--- a/incomplete.html
+++ b/incomplete.html
@@ -26,9 +26,9 @@
       gtag('js', new Date());
       gtag('config', 'UA-165022482-1');
   </script>
-  <meta name="Description" CONTENT="Golf Course Architecture New Construction Renovation Restoration Design Bunker Country Club GC CC Doak Hanse Coore Crenshaw Nicklaus Ebert Norman Kidd Jones Mingay Whitman Axland Cutten Rae Klein Franz Frye Straka Phillips Gaunt Illonen Eckenrode Clayton Pont Devries Lohmann Quitno King Collins Woods Lobb Dye Top 100 Best">
+  <meta name="Description" CONTENT="Golf Course New Construction Renovation Restoration Design Incomplete Property Commercial Real Estate">
   <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34="/>
-  <title>Golf Course Architecture New Construction Renovation Restoration</title>
+  <title>Golf Course Incomplete Property</title>
   
     <style>
         table { border-collapse: collapse; }
@@ -95,7 +95,7 @@
           </thead>
           <tbody>
             
-              {% for item in site.data.all2019 %}
+              {% for item in site.data.allI %}
                   <tr>
                     <td>{{ item.Region }}</td> 
                     <td>{{ item.Country }}</td>
