--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ Data Curated is the most recent date a golf course project has been reviewed.
 </H4>
 <H4>
 <p><a href="https://fescue.github.io/2019">2019 archive</a></p>
+  <p><a href="https://fescue.github.io/incomplete">Abandoned</a></p>
 #Past 100: Previous Top 100 listing. Short: 9-hole and/or par-3 course.
 </H4>
 <footer>
